tests/bug_detector_tests/arrayConstLength1.js
new Array(1.5);
new Array(Infinity);
new Array(NaN);
new Array(Math.random());
